--- a/style/style.css
+++ b/style/style.css
@@ -47,7 +47,7 @@ body .wrapper {
 
 .first header .menubar .logo {
   margin-top: 20px;
-  background-image: url(logo_white.svg);
+  background-image: url(svg/logo_white.svg);
   background-repeat: no-repeat;
   background-size: contain;
   width: 18%;
@@ -178,8 +178,9 @@ body .wrapper {
 }
 
 .first .container .picture {
-  background-image: url(Header-desktop-1024x701.png);
+  background-image: url();
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   width: 50%;
   height: auto;
@@ -207,7 +208,7 @@ body .wrapper {
 
 .second .box1 .picture {
   margin-top: 50px;
-  background-image: url(link-building.svg);
+  background-image: url(svg/link-building.svg);
   background-repeat: no-repeat;
   background-size: contain;
   width: 250px;
@@ -364,7 +365,7 @@ body .wrapper {
 }
 
 .fourth .container .picture {
-  background-image: url(f1_z-1024x842.png);
+  background-image: url(images/f1_z-1024x842.png);
   background-repeat: no-repeat;
   background-size: contain;
   width: 50%;
@@ -385,7 +386,7 @@ body .wrapper {
 }
 
 .fourth .container2 .picture {
-  background-image: url(f2_z-862x1024.png);
+  background-image: url(images/f2_z-862x1024.png);
   background-repeat: no-repeat;
   background-size: contain;
   width: 55%;
